syntax = "proto3";

package pt.ulisboa.ist.sirs.contract.authenticationserver;
import "Enums.proto";

message DiffieHellmanExchangeRequest {
  bytes clientPublic = 1;
}

message DiffieHellmanExchangeResponse {
  bytes serverPublic = 1;
  bytes parameters = 2;
}

message AuthenticateRequest {
  string source = 1;
  string target = 2;
  string timeStamp = 3;
}

message LookupRequest {
  enums.Services service = 1;
}

message LookupResponse {
  message ServiceServer {
    string qualifier = 1;
  }
  repeated ServiceServer servers = 1;
}

message AuthenticateResponse {
  string address = 1;
  int32 port = 2;
  string timeStamp = 3;
  bytes sessionKey = 4;
  bytes sessionIV = 5;
  string qualifier = 6;
  bytes ticket = 7;
}

service AuthenticationServerService {
  rpc diffieHellmanExchange(DiffieHellmanExchangeRequest) returns (DiffieHellmanExchangeResponse);
  rpc lookup(LookupRequest) returns (LookupResponse);
  rpc authenticate (AuthenticateRequest) returns (AuthenticateResponse);
}
